force-app/main/default/objects/Master_Service__c/Master_Service__c.object-meta.xml
<CustomObject>
    <label>Master Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Service</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>