force-app/main/default/objects/Master_Service__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>사업 대분류</description>
    <label>Business</label>
    <referenceTo>Business__c</referenceTo>
    <relationshipName>Service</relationshipName>
    <type>Lookup</type>
</CustomField>