force-app/main/default/objects/Master_Service__c/fields/ServiceBizUnit__c.field-meta.xml
<CustomField>
    <fullName>ServiceBizUnit__c</fullName>
    <description>사업부 명</description>
    <label>Service Biz Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>