force-app/main/default/objects/Master_Service__c/fields/ServiceBizUnitCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceBizUnitCode__c</fullName>
    <description>사업부 코드</description>
    <label>Service Biz Unit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>