force-app/main/default/objects/Master_Service__c/fields/ServiceDepartment__c.field-meta.xml
<CustomField>
    <fullName>ServiceDepartment__c</fullName>
    <description>서비스 팀</description>
    <label>Service Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>