force-app/main/default/objects/Master_Service__c/fields/ServiceDepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceDepartmentCode__c</fullName>
    <description>서비스 팀 코드</description>
    <label>Service Department Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>