force-app/main/default/objects/Master_Service__c/fields/TechAttribute__c.field-meta.xml
<CustomField>
    <fullName>TechAttribute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tech. Attribute</description>
    <label>TechAttribute</label>
    <type>Checkbox</type>
</CustomField>