force-app/main/default/objects/Master_Service__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>사용여부</description>
    <label>Use</label>
    <type>Checkbox</type>
</CustomField>