force-app/main/default/objects/Master_Service__c/fields/ValidityEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityEndDate__c</fullName>
    <description>유효 종료일</description>
    <label>Validity End Date</label>
    <type>Date</type>
</CustomField>